unpackaged/main/default/objects/scrubDemo_Interaction_Analysis__c/scrubDemo_Interaction_Analysis__c.object-meta.xml
<CustomObject>
    <description>Deprecated. Removed supporting components. Confirm with Hanul and delete.</description>
    <label>Interaction Analysis</label>
    <nameField>
        <displayFormat>IA-{00000}</displayFormat>
        <label>Interaction Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interaction Analyses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>