unpackaged/main/default/objects/scrubDemo_Interaction_Analysis__c/fields/Analyzed_Object__c.field-meta.xml
<CustomField>
    <fullName>Analyzed_Object__c</fullName>
    <inlineHelpText>Type of object analyzed for this</inlineHelpText>
    <label>Analyzed Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>