unpackaged/main/default/objects/scrubDemo_Interaction_Analysis__c/fields/Analyzed_Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Analyzed_Object_ID__c</fullName>
    <label>Analyzed Object ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>