unpackaged/main/default/objects/scrubDemo_Interaction_Analysis__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Interaction Analyses</relationshipLabel>
    <relationshipName>Interaction_Analyses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>