unpackaged/main/default/objects/scrubDemo_Interaction_Analysis__c/fields/Prediction_Conf_1__c.field-meta.xml
<CustomField>
    <fullName>Prediction_Conf_1__c</fullName>
    <label>Prediction Conf 1</label>
    <precision>16</precision>
    <scale>14</scale>
    <type>Number</type>
</CustomField>