unpackaged/main/default/objects/scrubDemo_Interaction_Analysis__c/fields/Prediction_Conf_3__c.field-meta.xml
<CustomField>
    <fullName>Prediction_Conf_3__c</fullName>
    <label>Prediction Conf 3</label>
    <precision>9</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>