unpackaged/main/default/objects/scrubDemo_Interaction_Analysis__c/fields/Prediction_Result_2__c.field-meta.xml
<CustomField>
    <fullName>Prediction_Result_2__c</fullName>
    <label>Prediction Result 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>