unpackaged/main/default/objects/scrubDemo_Interaction_Analysis__c/fields/Prediction_Value__c.field-meta.xml
<CustomField>
    <fullName>Prediction_Value__c</fullName>
    <formula>IF( Prediction_Result_1__c = &quot;positive&quot;,  Prediction_Conf_1__c , 
     IF( Prediction_Result_1__c = &quot;negative&quot;, -1* Prediction_Conf_1__c , 
          IF(Prediction_Result_2__c = &quot;positive&quot;, Prediction_Conf_2__c, -1*Prediction_Conf_2__c)
     )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prediction Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>